--- a/static/style.css
+++ b/static/style.css
@@ -4,10 +4,12 @@ body {
   margin: 0;
   font-family: "Playfair Display", serif;
   background: #222;
-  background-image: url('https://source.unsplash.com/1600x900/?{{r[0]}},landscape');
+  background-image: url('https://source.unsplash.com/1600x900/?landscape, water');
+  background-size: 100%;
+  font-size: 100%;
 }
 .card {
-  background: #00000d0;
+  background: #000000d0;
   color: white;
   padding: 2em;
   border-radius: 30px;
@@ -15,3 +17,33 @@ body {
   max-width: 420px;
   margin: 1em;
 }
+
+.search {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button:hover {background: #7c7c7c6b;}
+
+input.search-bar {border: none;
+  outline: none;padding: 0.5em 1em;
+  border-radius: 24px;
+  background: #7c7c7c2b;
+  color: white;
+  font-family: inherit;
+  font-size: 120%;
+  width: calc(100% - 100px)}
+
+button {
+    margin: 0.5em;
+    border-radius: 50%;
+    border: none;
+    height: 44px;
+    width: 44px;
+    outline: none;
+    background: #7c7c7c2b;
+    color: white;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+  }
